# cdac

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
src/: beam.c  beam.h  beamdynamic.c  beamdynamic.h  blur.c  blur.h  boxmuller.c  boxmuller.h  canny.h  cellcmp2.c  cellrend2.sh  compressimg.c  compressimg.h  doall.sh  edgeprob.c  extract2.c  filters.c  filters.h  fit_path.h  fit_path2.c  framelist.c  framelist.h  gabor.c  gabor.h  global.h  hausdorff.c  hausdorff.h  histnorm.c  histnorm.h  isqrt.h  line_intrsct.c  line_intrsct.h  matrix.c  matrix.h  noisetest.sh  path-cache.c  path.c  path.h  pathstat.c  pclin.c  (+20 more)
src/archive/: Oct23.txt  cell-rend.sh  edgefollow.c  extract.c  gaus5x5  gaus5x5.pgm  genisqrt.c  keratocyte.c  linefollow.c  log.txt  makeall.sh  matlab-fft-session.txt  mo.c  motilecell.c  motion.c  move.c  options  pclin_autocorr.c  pixelcurve.c  proc.c  robie-cache.c  svg2txt.c  test.c
src/gui/: robie.glade  robie.py
src/imagej/: absnake-multi.js  abstrack.js
src/matlab/: acinvtest.m  acinvtest2.m  analysis.m  autocorr-plot.m  autocorr.m
src/nuclei/: markers  nucfollow.c  watershed.c  watershed.h
